# ChangeLog for dev-perl/libwww-perl
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.24 2004/02/27 21:16:45 mcummings Exp $

  27 Feb 2004; Michael Cummings <mcummings@gentoo.org>
  libwww-perl-5.76.ebuild:
  Adjusting dep for HTML-Parser, per bug 43127

  24 Feb 2004; <agriffis@gentoo.org> libwww-perl-5.76.ebuild:
  stable on alpha and ia64

  20 Jan 2004; <gustavoz@gentoo.org> libwww-perl-5.69-r2.ebuild:
  stable on sparc

  18 Jan 2004; <tuxus@gentoo.org> libwww-perl-5.69-r2.ebuild:
  Added ~mips to KEYWORDS.

*libwww-perl-5.76 (22 Dec 2003)

  22 Dec 2003; <rac@gentoo.org> libwww-perl-5.69-r2.ebuild,
  libwww-perl-5.76.ebuild:
  Install into vendordir, bump, address bug 30616

*libwww-perl-5.69-r1 (20 Jul 2003)

  20 Jul 2003; Michael Cummings <mcummings@gentoo.org>
  libwww-perl-5.69-r1.ebuild:
  Added ssl support to build. Good catch by eric sammer <eric@ineoconcepts.com>
  in bug 24798

  24 Jun 2003; Aron Griffis <agriffis@gentoo.org> libwww-perl-5.69.ebuild:
  Mark stable on alpha

*libwww-perl-5.69 (31 May 2003)

  02 Jul 2003; Guy Martin <gmsoft@gentoo.org> libwww-perl-5.69.ebuild :
  Marked stable on hppa.

  31 May 2003; Michael Cummings <mcummings@gentoo.org>
  libwww-perl-5.69.ebuild:
  Update from CPAN

*libwww-perl-5.68 (15 Jan 2003)

  04 Apr 2003; Zach Welch <zwelch@gentoo.org> libwww-perl-5.68.ebuild:
  add arm keyword

  28 Feb 2003; Guy Martin <gmsoft@gentoo.org> libwww-perl-5.68.ebuild :
  Added hppa to keywords.

  15 Jan 2003; Michael Cummings <mcummings@gentoo.org> : libwww-perl-5.8.ebuild:

  Version bump was for dep in MythTV, as well as bugs 12553 and 13045. 5.66
  is no longer available, 5.8 is the next stable.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations
