@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/libwww-perl
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.24 2004/02/27 21:16:45 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.25 2004/03/14 11:30:10 mcummings Exp $
+
+  14 Mar 2004; Michael Cummings <mcummings@gentoo.org>
+  libwww-perl-5.69-r2.ebuild, libwww-perl-5.76.ebuild:
+  Because test failures for libwww-perl are 99% due to external factors, I've
+  added a block to allow the merge to continue but to display a warning to the
+  user so that they are aware that the tests didn't pass, and to list some
+  factors involved.
 
   27 Feb 2004; Michael Cummings <mcummings@gentoo.org>
   libwww-perl-5.76.ebuild:
